No-background and version wrapping bug fix

--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -1,3 +1,7 @@
+.headerContainer {
+  display: flex;
+}
+
 .header {
   display: flex;
   flex: 1;
