--- a/app/components/Header/Version/Version.scss
+++ b/app/components/Header/Version/Version.scss
@@ -5,5 +5,6 @@
   align-items: center;
   font-family: 'Roboto Condensed';
   font-size:14px;
+  white-space: nowrap;
   color:#949494;
 }
